feat: Refactor User model to use value objects for email and password, update related repositories and resources